chore: пайплайн — сборка и деплой agent-worker
- воркер не собирался вовсе: не было ни его путей в триггере, ни джоба
- правило «libs/ → пересобрать всё» теперь охватывает и его: agentworker-proto
  задаёт контракт обеих сторон, собрать одну без другой значит развести версии
- ci.md: убраны ops/runner (нет в репозитории), инструкция по настройке
  frontend-репозитория и флаг UseZGC, которого нет в Dockerfile